--- a/package.json
+++ b/package.json
@@ -1,44 +1,50 @@
 {
-   "name": "nookies",
-   "description": "A set of cookie helpers for Next.js",
-   "version": "1.0.7",
-   "main": "dist/index.js",
-   "repository": "maticzav/nookies",
-   "author": {
-      "name": "Matic Zavadlal",
-      "email": "matic.zavadlal@gmail.com"
-   },
-   "scripts": {
-      "pre-publish": "babel --out-file dist/index.js index.js",
-      "test": "xo"
-   },
-   "dependencies": {
-      "cookie": "^0.3.1"
-   },
-   "devDependencies": {
-      "babel-cli": "^6.26.0",
-      "babel-eslint": "^8.2.1",
-      "babel-preset-env": "^1.6.1",
-      "eslint": "^4.15.0",
-      "eslint-config-xo": "^0.19.0",
-      "xo": "^0.18.2"
-   },
-   "keywords": [
-      "cookie",
-      "cookies",
-      "next",
-      "nextjs",
-      "js",
-      "auth",
-      "destory",
-      "parse",
-      "create",
-      "nookies"
-   ],
-   "xo": {
-      "parser": "babel-eslint",
-      "semicolon": false,
-      "space": 3
-   },
-   "license": "MIT"
+  "name": "nookies",
+  "description": "A set of cookie helpers for Next.js",
+  "version": "0.0.0-semantic-release",
+  "main": "dist/index.js",
+  "repository": "maticzav/nookies",
+  "author": {
+    "name": "Matic Zavadlal",
+    "email": "matic.zavadlal@gmail.com"
+  },
+  "scripts": {
+    "prepublish": "npm run test",
+    "build": "babel --out-file dist/index.js index.js",
+    "test": "npm run build && xo",
+    "semantic-release": "semantic-release"
+  },
+  "dependencies": {
+    "cookie": "^0.3.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.2.1",
+    "babel-preset-env": "^1.6.1",
+    "eslint": "^4.15.0",
+    "eslint-config-xo": "^0.19.0",
+    "xo": "^0.18.2",
+    "semantic-release": "^15.5.2"
+  },
+  "keywords": [
+    "cookie",
+    "cookies",
+    "next",
+    "nextjs",
+    "js",
+    "auth",
+    "destory",
+    "parse",
+    "create",
+    "nookies"
+  ],
+  "xo": {
+    "parser": "babel-eslint",
+    "semicolon": false,
+    "space": 3
+  },
+  "release": {
+    "branch": "master"
+  },
+  "license": "MIT"
 }
