--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "clean": "rimraf dist",
-    "compile": "tsc -d",
+    "compile": "webpack",
     "pretest": "npm run clean && npm run compile",
     "test": "echo 'test'",
     "posttest": "npm run lint",
@@ -29,15 +29,21 @@
     "@types/next": "7.0.9",
     "@types/node": "10.12.30",
     "@types/set-cookie-parser": "0.0.4",
-    "prettier": "1.16.4",
+    "husky": "^1.3.1",
+    "prettier": "^1.16.4",
     "prettier-check": "2.0.0",
+    "pretty-quick": "^1.10.0",
     "rimraf": "2.6.3",
     "semantic-release": "15.13.3",
+    "ts-loader": "^5.3.3",
     "ts-node": "8.0.3",
     "tslint": "5.13.1",
     "tslint-config-prettier": "1.18.0",
     "tslint-config-standard": "8.0.1",
-    "typescript": "3.3.3333"
+    "typescript": "3.3.3333",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3"
   },
   "keywords": [
     "cookie",
