--- a/package.json
+++ b/package.json
@@ -11,30 +11,39 @@
   },
   "scripts": {
     "clean": "rimraf dist",
+    "coverage": "codecov",
     "compile": "ncc build src/index.ts -o dist -m",
-    "pretest": "npm run clean && npm run compile",
-    "test": "echo 'test'",
-    "posttest": "npm run lint",
-    "lint": "tslint --project tsconfig.json {src}/**/*.ts && prettier-check --ignore-path .gitignore src/**/*.ts",
-    "prettier": "prettier --write --ignore-path .gitignore src/**/*.ts",
-    "prepublishOnly": "npm run compile",
-    "prerelease": "npm run test",
-    "semantic-release": "semantic-release"
+    "prepublishOnly": "npm-run-all -s clean compile",
+    "release": "semantic-release",
+    "test": "jest"
   },
   "dependencies": {
     "cookie": "^0.4.0"
   },
+  "peerDependencies": {
+    "next": "*"
+  },
   "devDependencies": {
     "@types/cookie": "0.3.3",
-    "@types/next": "8.0.6",
-    "@types/node": "10.14.13",
+    "@types/jest": "^24.0.15",
+    "@types/node": "12.6.8",
+    "@types/react": "^16.8.23",
+    "@types/request-promise-native": "^1.0.16",
     "@zeit/ncc": "^0.20.4",
+    "codecov": "^3.5.0",
     "husky": "3.0.1",
+    "jest": "^24.8.0",
+    "next": "^9.0.2",
+    "npm-run-all": "^4.1.5",
     "prettier": "1.18.2",
     "prettier-check": "2.0.0",
     "pretty-quick": "1.11.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "request-promise-native": "^1.0.7",
     "rimraf": "2.6.3",
     "semantic-release": "15.13.18",
+    "ts-jest": "^24.0.2",
     "ts-loader": "6.0.4",
     "ts-node": "8.3.0",
     "tslint": "5.18.0",
