--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,14 +19,15 @@ jobs:
         with:
           node-version: 12
       - run: yarn
-      # Build the package
-      - run: cd packages/nookies
-      - run: yarn build
       # Release
       - name: Copy README.md
-        run: cp ../../README.md ./
+        run: cp .README.md ./packages/nookies/
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npx semantic-release
+        run: |
+        # Build the package
+          cd packages/nookies
+          yarn build
+          npx semantic-release
