--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
       - run: yarn
       # Release
       - name: Copy README.md
-        run: cp .README.md ./packages/nookies/
+        run: cp README.md ./packages/nookies/
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
