--- a/examples/typescript/package.json
+++ b/examples/typescript/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.0.5",
+    "next": "^12.0.8",
     "nookies": "workspace:*",
     "react": "17.0.1",
     "react-dom": "17.0.1"
