--- a/packages/nookies/package.json
+++ b/packages/nookies/package.json
@@ -23,7 +23,7 @@
   "devDependencies": {
     "@types/cookie": "0.4.1",
     "@types/express": "4.17.13",
-    "@types/next": "9.0.0",
+    "@types/next": "^9.0.0",
     "@types/node": "14.18.5",
     "@types/set-cookie-parser": "2.4.2",
     "terser": "5.10.0"
